Atualização a partir do Github

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html> 
 <body>
     <h1> Minha pagina HTNL</h1>
+     <h2> Alteração da página HTML hoje </h2>
+     <h3> Adicionado conteudo a partir do Github</h3>
 </body>
-
 </html>
 
